2009-04-02  Sancho Lerena <slerena@artica.es>

	* pandoradb.sql: Final DB changes proposed for closing this month the DB
	scheme. tagente-> new server_name field to assign server (old fields will
	be removed).  talert_templates has two new types (warning, critical).
	tevento has "user_comment" new field. Tserver has three new fields, 
	server_type (so some old fields will be deleted), threads and queued_modules
	this last two are for statistical options. Tusuario add language type to
	override global language.
	
	* update_manager/main.php: Minor changes for correct ACL usage. Non PM
	users could see in what revision it the system, but only that.
	
	* pandoradb_migrate_v2.x_to_v3.0.sql: Updated script for new DB changes.
	
	* general/noaccess.php: Added footer and ending div. Page was very ugly
	when showing noaccess errors, nobody see it ???.
	
	* godmode/menu.php: A LOT of ACL fixes on several options.
	
	* godmode/agentes/agent_manager.php: Fixed a crazy floating icon.
	
	* godmode/agentes/manage_config_remote.php: A LOT of changes, rewriting
	stuff, because was not working. This also adds a lot of ACL checks. 
	
	* godmode/agentes/massive_config.php, massive*: ACL changes.
	
	* godmode/agentes/modificar_agente.php: Fixed ACL problems.
	
	* godmode/agentes/module_manager_editor.php: Fixed bad module categories for
	some types (data, plugin and prediction).
	
	* godmode/alerts/alert_list.php: Fixed ACL problem.
	
	* godmode/reporting/graph_builder.php: Added ACl restriction for 
	non-viewable agents for current user. Seems to be a problem with data
	with more than 2 sources.
	
	* godmode/reporting/map_builder.php: ACL checks improved.
	
	* godmode/reporting/reporting_builder.php: ACL checks added (was missing), 
	some code ported from 2.1, other is new. New fields shown in list.
	
	* include/functions.php: Fixed the annoying bug of "bad counters" in
	function human_time_description_raw(). Function used,format_numeric() should