@@ -475,6 +475,7 @@ function print_group_reporting ($id_group, $return = false) {
  * @return object A table object with the alert reporting..
  */
 function get_agent_alerts_reporting_table ($id_agent, $period = 0, $date = 0) {
+	global $config;
 	$table->data = array ();
 	$table->head = array ();
 	$table->head[0] = __('Type');
@@ -484,7 +485,7 @@ function get_agent_alerts_reporting_table ($id_agent, $period = 0, $date = 0) {
 	$table->head[4] = __('Last fired');
 	$table->head[5] = __('Times Fired');
 	
-	require_once ('include/functions_alerts.php');
+	require_once ($config["homedir"].'/include/functions_alerts.php');
 	
 	$alerts = get_agent_alerts ($id_agent);
 	/* FIXME: Add compound alerts to the report. Some extra code is needed here */
